NOCC 1.9  ???? ??, ????

  Bugs
    * Bug #2838547 : Mail download don't include attachments (Tim Gerundt).
    * Bug #2838521 : HTML code get not replaced in text attachments (Tim
      Gerundt).

  Misc
    * Fix syntax error in RSS feed script (Tim Gerundt).

NOCC 1.8.1  July 09, 2009

  Bugs
    * Bug #2816859 : Problems with mail encoding (Tim Gerundt).
    * Bug #2816844 : Missing "Attachments:" label (Tim Gerundt).

  Misc
    * Use translation for [unknown] attachments (Tim Gerundt).
    * Language files update (Siebrand Mazeland, translatewiki.net).

NOCC 1.8  July 01, 2009

  Bugs
    * Bug #2593952 : User-friendly error message, if config file missing
      (Tobias Mathes).
    * Bug #2734956 : Error occuring when variables not in translation
      available (Tobias Mathes).

  Patches
    * Patch #2502771 : Use new MailReader class (Tim Gerundt).

  Feature Requests
    * RFE #2678155 : Use FCKeditor as external SVN project (Tim Gerundt).
    * RFE #2593924 : Don't use source code in config file (Tobias Mathes).
    * RFE #2593901 : Slim down FCKeditor toolbar (Tim Gerundt).
    * RFE #2002532 : Group contacts via LDAP (Tobias Mathes).

  Misc
    * Add "Highest" and "Lowest" priority to sending (Tim Gerundt).
    * Show priority in mail view (Tim Gerundt).
    * Support priority column in inbox (Tim Gerundt).
    * Change "Forward" abbreviation from "Fw" to "Fwd" (Tim Gerundt).
    * Removed ".svn" folders from theme selections (Tobias Mathes).
    * Formatting of language file has been modified, for coorperation
      with translatewiki.net (Siebrand Mazeland).
    * Language files update (Siebrand Mazeland, translatewiki.net).
    * Drop fixed pixel font sizes from themes (Tim Gerundt).
    * Small updates for "newlook" theme (Tim Gerundt).
    * Use new Theme class (Tim Gerundt).
    * Themes supports now own favions (Tim Gerundt).

NOCC 1.7  January 01, 2009

  Bugs
    * Bug #2184243 : inconcistent reporting of new mail (Michiel van Loon).